<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drivetrain</name>
  <version>0.0.0</version>
  <description>Handles "Bender" robot drivetrain.</description>
  <maintainer email="jsimeone@mail.bradley.edu">Jacob S</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
